--- a/README
+++ b/README
@@ -42,7 +42,7 @@ EXAMPLE
      );
 
 DEPENDENCIES
-    Class::Utils(3pm), Error::Pure(3pm), PYX::Parser(3pm).
+    Class::Utils, Error::Pure, PYX::Parser.
 
 SEE ALSO
     TODO
