Add REPOSITORY section to doc.

--- a/README
+++ b/README
@@ -47,6 +47,9 @@ DEPENDENCIES
 SEE ALSO
     TODO
 
+REPOSITORY
+    <https://github.com/tupinek/PYX-Sort>
+
 AUTHOR
     Michal Špaček skim@cpan.org.
 
