Improve AUTHOR section in doc.

--- a/README
+++ b/README
@@ -51,7 +51,9 @@ REPOSITORY
     <https://github.com/tupinek/PYX-Sort>
 
 AUTHOR
-    Michal Špaček skim@cpan.org.
+    Michal Špaček <mailto:skim@cpan.org>
+
+    <http://skim.cz>
 
 LICENSE AND COPYRIGHT
      © 2011-2015 Michal Špaček
