Move pyx_attr_sort to App-PYX-Sort module.

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 TODO
 ====
-1. Udelat skript pyx_sort pro setrideni celeho dokumentu. Pro testovani
-   stejnosti xml dokumentu.
+1. Udelat funkcionalitu pro skript pyx_sort pro setrideni celeho dokumentu.
+   Pro testovani stejnosti xml dokumentu.
 2.
 
 Applied
