--- a/README
+++ b/README
@@ -1,8 +1,12 @@
 NAME
-    PYX::Sort - TODO
+    PYX::Sort - Processing PYX data or file and sort element attributes.
 
 SYNOPSIS
-    TODO
+     use PYX::Sort;
+     my $obj = PYX::Sort->new(%parameters);
+     $obj->parse($pyx, $out);
+     $obj->parse_file($input_file, $out);
+     $obj->parse_handle($input_file_handler, $out);
 
 METHODS
     "new(%parameters)"
@@ -10,23 +14,28 @@ METHODS
 
             *       "output_handler"
 
-                    TODO
+                     Output handler.
+                     Default value is \*STDOUT.
 
-    "parse()"
-            TODO
+    "parse($pyx[, $out])"
+             Parse PYX text or array of PYX text and print sorted list of element attributes in PYX format.
+             If $out not present, use 'output_handler'.
+             Returns undef.
 
-    "parse_file()"
-            TODO
+    "parse_file($input_file[, $out])"
+             Parse file with PYX data and print sorted list of element attributes in PYX format.
+             If $out not present, use 'output_handler'.
+             Returns undef.
 
-    "parse_handler()"
-            TODO
+    "parse_handler($input_file[, $out])"
+             Parse PYX handler print sorted list of element attributes in PYX format.
+             If $out not present, use 'output_handler'.
+             Returns undef.
 
 ERRORS
-     Mine:
-       TODO
-
-     From Class::Utils::set_params():
-       Unknown parameter '%s'.
+     new():
+             From Class::Utils::set_params():
+                     Unknown parameter '%s'.
 
 EXAMPLE
      # Pragmas.
@@ -36,16 +45,36 @@ EXAMPLE
      # Modules.
      use PYX::Sort;
 
+     # Example data.
+     my $pyx = <<'END';
+     (tag
+     Aattr1 value
+     Aattr2 value
+     Aattr3 value
+     -text
+     )tag
+     END
+
      # PYX::Sort object.
-     my $pyx = PYX::Sort->new(
-             TODO
-     );
+     my $obj = PYX::Sort->new;
+
+     # Parse.
+     $obj->parse($pyx);
+
+     # Output:
+     # (tag
+     # Aattr1="value"
+     # Aattr2="value"
+     # Aattr3="value"
+     # -text
+     # )tag
 
 DEPENDENCIES
     Class::Utils, PYX::Parser.
 
 SEE ALSO
-    TODO
+    PYX, PYX::GraphViz, PYX::Hist, PYX::Parser, PYX::Stack, PYX::Utils,
+    Task::PYX.
 
 REPOSITORY
     <https://github.com/tupinek/PYX-Sort>
