--- a/TODO
+++ b/TODO
@@ -2,7 +2,8 @@ TODO
 ====
 1. Udelat funkcionalitu pro skript pyx_sort pro setrideni celeho dokumentu.
    Pro testovani stejnosti xml dokumentu.
-2.
+2. Dodelat testy.
+3.
 
 Applied
 =======
