--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 TODO
 ====
-1. Udelat funkcionalitu pro skript pyx_sort pro setrideni celeho dokumentu.
+1. Udelat funkcionalitu pro skript pyx-sort pro setrideni celeho dokumentu.
    Pro testovani stejnosti xml dokumentu.
 3.
 
