--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.04
+ - Fix bugtracker.
  - Fix use lib '.' in Makefile.PL.
  - Update Module::Install to 1.19 version.
  - Update author github username.
