--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
  - Update Module::Install to 1.19 version.
  - Update author github username.
  - Update author username.
+ - Update copyright years.
 
 0.03 2015-10-21T15:02:50+02:00
  - Add tests for parse() and parse_handler() methods.
