--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.04
  - Fix bugtracker.
+ - Fix sense of example in doc.
  - Fix use lib '.' in Makefile.PL.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
