--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
  - Fix use lib '.' in Makefile.PL.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
+ - Rename example to better name.
  - Update Module::Install to 1.21 version.
  - Update author github username.
  - Update author username.
